8287692: Move Class primitive APIs to jdk.internal.value.PrimitiveClass
Update hotspot tests to use PrimitiveClass
Add imports of jdk.internal.value.PrimitiveClass
Add --add-exports java.base/jdk.internal.value=ALL-UNNAMED